--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-    <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="./styles/app.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1> Hello World </h1>
-    <script src="./scripts/app.js"></script>
+    <h1>My Super Task Manager</h1>
+    <main>
+        <section id="list">A</section>
+        <section id="form">
+            <h2>New Task</h2>
+            <div><i id="iImportant" class="fa-regular fa-star"></i></div>
+            <div class="flex-item">
+                <label>Title</label>
+                <input id="txtTitle" type="text">
+            </div>
+            <div class="flex-item">
+                <label>Description</label>
+                <textarea id="txtDescription" rows="4"></textarea>
+            </div>
+            <div class="flex-item">
+                <label>Color</label>
+                <input id="txtStart" type="color" />
+            </div>
+            <div class="flex-item">
+                <label>Start Date</label>
+                <input id="txtStart" type="date" />
+            </div>
+            <div class="flex-item">
+                <label>Status</label>
+                <select id="selectStatus">
+                    <option value="" disabled selected hidden>--- status ---</option>
+                    <option value="new">New</option>
+                    <option value="inProg">In progress</option>
+                    <option value="completed">Completed</option>
+                    <option value="canceled">Canceled</option>
+                </select>
+            </div>
+            <div class="flex-item">
+                <label>Budget</label>
+                <input id="numBudget" type="number" />
+            </div>
+            <div>
+                <button id="btnSave" class="btn btn-dark">Save</button>
+            </div>
+        </section>
+
+    </main>
+    <!-- 
+        Task:
+        important elements
+
+        title 
+        description 
+        color
+        start date
+        status 
+        budget
+        
+
+    -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
+
 </html>
