--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Super Task Manager</h1>
     <main>
         <section id="list" jhkjh>
-            <div>
+            <div class="btnShow">
                 <button id="btnDetails" class="btn btn-dark">Show/Hide Form </button>
             </div>
             <div class="pending-task">
